Theme Compat: Fix CSS overlapping border-radius from r6951.
Also bump package-lock.json.



git-svn-id: https://bbpress.svn.wordpress.org/branches/2.6@6956 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/src/templates/default/css/bbpress.css
+++ b/src/templates/default/css/bbpress.css
@@ -826,7 +826,6 @@ p.form-allowed-tags {
 	background-color: transparent;
 	box-shadow: none;
 	text-shadow: none;
-	border-radius: 0;
 	text-transform: uppercase;
 	font-size: 11px;
 	font-weight: 400;
